--- a/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
@@ -6,6 +6,10 @@
 	<string>https://apigw-live3.seldatdirect.com/dev/solocate-a1/api/</string>
 	<key>BASE_URL_STAGING</key>
 	<string>https://apigw2.seldatdirect.com/demo/dms-customization/api/</string>
+	<key>BASE_URL_DEMO</key>
+	<string>https://apigw-live3.seldatdirect.com/demo/solocate-a1/api/</string>
+	<key>BASE_URL_QC</key>
+	<string>https://apigw-live3.seldatdirect.com/qc/solocate-a1/api/</string>
 	<key>BASE_URL_PRODUCT</key>
 	<string>https://apigw2.seldatdirect.com/live/dms-customization/api/</string>
 	<key>BASE_URL_GOOGLE_MAP</key>
