--- a/DMSDriver/Podfile
+++ b/DMSDriver/Podfile
@@ -22,6 +22,7 @@ def shared_pods
     pod 'Charts'
     pod 'Fabric'
     pod 'Crashlytics'
+    pod 'ImageSlideshow', '~> 1.8'
 end
 
 target 'DMSDriver' do
