--- a/DMSDriver/DMSDriver-Dev-Info.plist
+++ b/DMSDriver/DMSDriver-Dev-Info.plist
@@ -111,7 +111,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Login</string>
+	<string>Loading</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
