--- a/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Ashdod Dev.xcscheme
+++ b/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Ashdod Dev.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-               BuildableName = "DMSDriver-Dev.app"
-               BlueprintName = "DMSDriver-Dev"
+               BuildableName = "Ashdod Dev.app"
+               BlueprintName = "Ashdod Dev"
                ReferencedContainer = "container:DMSDriver.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-            BuildableName = "DMSDriver-Dev.app"
-            BlueprintName = "DMSDriver-Dev"
+            BuildableName = "Ashdod Dev.app"
+            BlueprintName = "Ashdod Dev"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -56,8 +56,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-            BuildableName = "DMSDriver-Dev.app"
-            BlueprintName = "DMSDriver-Dev"
+            BuildableName = "Ashdod Dev.app"
+            BlueprintName = "Ashdod Dev"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -85,8 +85,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-            BuildableName = "DMSDriver-Dev.app"
-            BlueprintName = "DMSDriver-Dev"
+            BuildableName = "Ashdod Dev.app"
+            BlueprintName = "Ashdod Dev"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
