--- a/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Ashdod Live.xcscheme
+++ b/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Ashdod Live.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-               BuildableName = "DMSDriver.app"
-               BlueprintName = "DMSDriver"
+               BuildableName = "Ashdod Live.app"
+               BlueprintName = "Ashdod Live"
                ReferencedContainer = "container:DMSDriver.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "DMSDriver.app"
-            BlueprintName = "DMSDriver"
+            BuildableName = "Ashdod Live.app"
+            BlueprintName = "Ashdod Live"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -56,8 +56,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "DMSDriver.app"
-            BlueprintName = "DMSDriver"
+            BuildableName = "Ashdod Live.app"
+            BlueprintName = "Ashdod Live"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -102,8 +102,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "DMSDriver.app"
-            BlueprintName = "DMSDriver"
+            BuildableName = "Ashdod Live.app"
+            BlueprintName = "Ashdod Live"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
