--- a/DMSDriver/Podfile
+++ b/DMSDriver/Podfile
@@ -24,7 +24,8 @@ def shared_pods
     pod 'Crashlytics'
     pod 'ImageSlideshow'
     pod 'UITextView+Placeholder'
-	pod 'Floaty'
+    pod 'Floaty'
+    pod 'DropDown'
 end
 
 target 'Ashdod Dev' do
