--- a/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
@@ -5,9 +5,9 @@
 	<key>BASE_URL_DEV</key>
 	<string>https://apigw-live3.seldatdirect.com/dev/ashdodb/solocate/api/</string>
 	<key>BASE_URL_STAGING</key>
-	<string>https://apigw2.seldatdirect.com/demo/dms-customization/api/</string>
-	<key>BASE_URL_DEMO</key>
 	<string>https://apigw-live3.seldatdirect.com/staging/ashdodb/solocate/api/</string>
+	<key>BASE_URL_DEMO</key>
+	<string>https://apigw-live3.seldatdirect.com/demo/ashdodb/solocate/api/</string>
 	<key>BASE_URL_QC</key>
 	<string>https://apigw-live3.seldatdirect.com/qc/ashdodb/solocate/api/</string>
 	<key>BASE_URL_PRODUCT</key>
